--- a/desafios/d0012/estilo/style.css
+++ b/desafios/d0012/estilo/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -20,6 +30,8 @@ header{
 header h1{
     font-variant: small-caps;
     padding-top:40px;
+    font-family: var(--fonte2);
+    font-size: 3.5em;
 }
 
 header p {
@@ -41,6 +53,12 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 1.6em;
+}
+
+section p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -51,11 +69,26 @@ section.normal {
 section.imagem {
     background-color: rgb(107, 107, 107);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.446);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem p {
-    width: 400px;
-    background-color: rgb(70, 70, 70);
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(70, 70, 70, 0.506);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-position:right center ;
 }
 
 footer {
